--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 #cloudTop{
     position: absolute;
     width: 80%;
@@ -31,11 +32,27 @@
 }
 #mainTitle{
     margin-top: 200px;
+    margin-bottom: 100px;
 }
 #examplePic{
     position: relative;
     width: 100%;
     padding-bottom: 200px;
+}
+.purple{
+    color: #B540FF;
+}
+.downloadBig{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    margin: auto;
+    transform: translate(0,0);
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+.downloadBig img{
+    height: 70%;
 }
 .clear{
     clear: both;
@@ -60,7 +77,9 @@
     transform: translate(0,0);
     width: 100%;
     /* max-width: 400px; */
+   
     margin: auto;
+    margin-bottom: 20px;
 }
 .textLeft{
     text-align: left;
@@ -83,11 +102,13 @@
 
 }
 .cont-xs{
+    position: relative;
     width: 25%;
     text-align: center;
     color: #0175BA;
 }
 .cont-l{
+    position: relative;
     width: 80%;
     margin: auto;
     max-width: 1536px;
@@ -99,20 +120,41 @@
     width: 90%;
     max-width: 1728px;
     margin: auto;
+    margin-top: 100px;
     color: #0175BA;
+    text-align: center;
 }
 .workshops{
-    height: 550px;
+    height: 500px;
     position: relative;
 }
-.extraTop{
-    margin-top: 650px;
-}
+
 .pf{
     width: 70%;
     margin: auto;
+    margin-bottom: 10px;
 }
-
+.subtitle{
+    margin-bottom: 20px;
+    
+}
+.tutorialText{
+    position:absolute;
+    margin-top: 50%;
+    transform: translate(0,-50%);
+}
+.contactWork{
+    margin-top: 100px;
+}
+.contactWork p{
+    margin-bottom: 20px;
+    font-size: 0.9em;
+}
+iframe{
+    /* top: 0; */
+    width: 640px;
+    height: 400px;
+}
 button{
     background-color: #B540FF;
     border-radius: 25px;
@@ -139,7 +181,7 @@ footer{
     position: relative;
     width: 100%;
     height: 200px;
-    padding-top: 200px;
+    padding-top: 100px;
 }
 footer .cont-xs{
     width: 200px;
@@ -163,9 +205,7 @@ footer .navText{
     font-family: 'madaRegular';
     src: url(../fonts/Mada-Regular.ttf);
 }
-.subtitle{
-    margin-top: -70px;
-}
+
 .workshops button{
     position: absolute;
     left: 0;
@@ -175,6 +215,7 @@ h1{
     
     font-size: 7em;
     font-family: 'skaterGirlsRock';
+  
 }
 h2{
     font-family: 'skaterGirlsRock';
@@ -228,6 +269,20 @@ nav{
 nav.img{
     margin-right: 100px;
 }
+@media only screen and (max-width: 1440px){
+    iframe{
+        /* top: 0; */
+        width: 440px;
+        height: 300px;
+    }
+    .navText{
+        font-size:1.6em;
+    }
+    p{
+        width: 210px;
+    }
+    
+}
 @media only screen and (max-width: 1260px){
     ul{
         margin-left: 30%;
@@ -241,6 +296,11 @@ nav.img{
         width: 300px;
         max-height: 244.5px;
     }
+    /* iframe{
+        top: 0;
+        width: 440px;
+        height: 300px;
+    } */
     h1{
         font-size: 5.5em;
     }
@@ -274,6 +334,9 @@ nav.img{
     ul{
         margin-left: 25%;
     }
+    .contactWork{
+        margin-top: -150px;
+    }
     .classSelectImg{
         width: 200px;
         max-height: 163px;
@@ -282,6 +345,18 @@ nav.img{
         font-size: 0.8em;
         margin-left: 10%;
         margin-top: 24px;
+    }
+    .tutorialBlock{
+        height: 220px;
+    }
+    #mainTitle{
+        margin-top: 80px;
+        margin-bottom: 80px;
+    }
+    iframe{
+        /* top: 0; */
+        width: 340px;
+        height: 250px;
     }
     h1{
         font-size: 4.5em;
@@ -314,22 +389,22 @@ nav.img{
         height: 300px;
     }
     .cont-xs{
-        width: 50%;
+        width: 30%;
         height: 380px;
     }
+    .pfCont .cont-xs{
+        width: 50%;
+    }
+    
     footer .cont-xs{
         height: 90px;
         width: 130px;
     }
-    .subtitle{
-        margin-top: -60px;
-    }
+    
     .classSelect{
         height: 307px;
     }
-    .extraTop{
-        margin-top: 400px;
-    }
+    
     #examplePic{
         padding-bottom: 0px;
     }
@@ -337,9 +412,48 @@ nav.img{
         font-size: 0.9em;
         width: 100%;
     }
+    .tutorialBlock .cont-xs{
+        margin-bottom: -80px;
+    }
+}
+@media screen and (max-width:740px){
+    
+   .tutorialBlock .cont-m{
+        display: flex;  /*https://stackoverflow.com/questions/18309698/centering-div-that-is-wider-than-its-parent-without-setting-negative-left-margin */
+        justify-content: center; 
+        clear: both;
+        float: none;
+        margin: 0 auto;
+   }
+   iframe{
+       flex-shrink: 0;
+   }
+   .tutorialBlock .cont-xs{
+       clear: both;
+       float: none;
+       margin: 0 auto;
+       height: 120px;
+       
+   }
+   .tutorialBlock{
+    margin-bottom: 200px;
+    }
+    .contactWork{
+        margin-top: 100px;
+    }
 }
 @media only screen and (max-width: 648px){
     .cont-xs{
         height: 300px;
     }
+    .tutorialBlock .cont-xs{
+        height: 100px;
+        
+    }
+    
+    .workshops p{
+        max-width: 100px;
+    }
+    
 }
+
